--- a/exemplo_01.ipynb
+++ b/exemplo_01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "exemplo_01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNPEM+352xsxNj8r6FLFWxU",
+      "authorship_tag": "ABX9TyMtJSKNSRF6vJoK+K4XgWEw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,79 @@
       "metadata": {
         "id": "MooTJJegw5x9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "5cc3b597-eac5-4a53-8fb1-ab4c101a78d5"
       },
       "source": [
-        ""
+        "### isto é um comando de saída\n",
+        "print('Olá Mundo Cruel!!!')\n",
+        "print('Cruel World!!!')\n",
+        "print(\"'Com áspas duplas'\")\n",
+        "\n",
+        "# A hastag é um comentário no códiogo, ou seja, o programa nao irá processar nenhuma linha que estiver marcada.\n",
+        "# O comando print() mostra na tela, ou seja, é uma saída de valor(es). O conteúdo texto deve estar entre áspas (simples ou dupla)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Olá Mundo Cruel!!!\n",
+            "Cruel World!!!\n",
+            "'Com áspas duplas'\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ONgTZaBi4isI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Está é uma célula somente de texto.\n",
+        "Aqui posso fazer formatações usando as ferramentas que estão na barra. Por exemplo: **Isto está em negrito**, *Isto está em itálico*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QsEJLBgj5D1N",
+        "colab_type": "text"
+      },
+      "source": [
+        "Abaixo, vamos ver como mesclar uma saída de tela"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SvGNel7r5JKC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a70b3aee-484c-43ab-8fb9-8ecfe2656704"
+      },
+      "source": [
+        "print('William', 'de', 'Castro', 'Torres')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "William De Castro Torres\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
